--- a/packages/networking.org
+++ b/packages/networking.org
@@ -5,5 +5,5 @@
 | pacman | tcpdump      | N.A.     | dump network traffic                           |
 | pacman | nmap         | N.A.     | nmap                                           |
 | pacman | wireshark-qt | N.A.     | interactively dump and analyze network traffic |
-| aur    | termshark    | N.A.     | wireshark in the terminal                      |
+| pacman | termshark    | N.A.     | wireshark in the terminal                      |
 
